examples/test/testpolicy10200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10200
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key48: value37
      key42: value8
      key23: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value49
          key7: value47
      podSelector:
        matchLabels:
          key25: value31
          key13: value49
